# mega-da-virada-generator

./: Cargo.toml  mega_sena.csv  mega_sena.db
migrations/: 0004_reboot_mega_sena_generation.sql  0005_add_data_typesafe_column.sql  0006_add_column_generated_games.sql  0007_add_mission_control_table.sql
src/: main.rs
src/core/: historico_mega_sena.rs  mega_sena.rs  mod.rs
src/database/: csv.rs  mega_sena_bootstrap.rs  migrations.rs  mod.rs
src/engine/: analyser.rs  game_generator.rs  mega_sena_service.rs  mod.rs
src/shared/: sha3.rs
