[package]
name = "mega-da-virada-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["alloc", "serde"] }
csv = "1.4.0"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"
